# app/Http/Controllers/API/BaseController.php
@@ -22,6 +22,17 @@ class BaseController extends Controller
      * 		property="message",
      * 		type="string"
      * 	),
+     *    example={
+     *    "200": "Dpmain created",
+     *    "501": "Domain not registered error",
+     *    "502": "Domain too short error",
+     *    "503": "Domain too long error",
+     *    "504": "Domain should start from letter",
+     *    "505": "Wrong domain error",
+     *    "506": "Domain Incorect symbols error",
+     *    "508": "Domain already exist", 
+     *    "509": "Domain control already exist",                                 
+     *     },     
      * )
      */
     public function sendResponse($result, $message)
